# code

./: .emacs  .gitignore  .gitmodules  README.md  hoqgit show20eed47  test.org
OpenGlTest/: Common.hpp  GlWindow.cpp  GlWindow.hpp  GlxWindow.cpp  GlxWindow.hpp  Makefile  main.cpp
Stm32F4DiscoveryTest/ldscripts/: gcc.ld  nokeep.ld
Stm32F4DiscoveryTest/src/: makefile.conf
bare/: Makefile  README.md  stm32cube
bare/00_light_up_led/: .gdbinit  Makefile  README.md  program.S  script.ld
bare/01_blink_led/: README.md  program.c  script.ld  vectors.S
bare/apps/: README.md  common.mk
bare/apps_special/: Makefile
bare/arm-none-eabi/: 4.9.3  include
bare/datasheets/: README.md
bare/dox/: Doxyfile_cmsis  Doxyfile_cmsis_stm32f4xx  Doxyfile_drivers  Doxyfile_stm32f4-disc  README.md
bare/ldscripts/: README.md  script.ld
bare/lib/: Makefile  README.md
bare/mk/: README.md  app.mk  calc_files.mk  calcfiles.mk  common.mk  functions.mk  lib.mk  libhal.mk  libhal_specs.mk  make_all_dirs.mk  make_app.mk  make_lib.mk  tags.mk  vpath.mk
bare/orig/: README.md
bare/src/: README.md
bare/startup/: startup_ARMCM4.S  startup_stm32f407xx.S
bare/stm32cubef4/: CMSIS_Inc  CMSIS_STM32F4xx_Inc  STM32F4-Discovery  STM32F4xx_HAL_Driver_Inc  STM32F4xx_HAL_Driver_Src
bare/tags/: Makefile  README.md
bare_on_eclipse/: README.md
bare_on_eclipse/00_forever/: .cproject  .project
bare_on_eclipse/01_blink_led/: .cproject  .project  README.md
bare_on_eclipse/02_stm32cubemx_blink_led/: .cproject  .project  README.md
betelgeuse/: Makefile  betelgeuse.cpp
doc/: bash.org  bash_tricks.md  git.org  linux_tricks.org
dsp/: discrete_fourier_transform.ipynb
elisp/: common.el
gcc-arm-none-eabi-5_2-2015q4_samples/: README.md
gl_cube/: CMakeLists.txt
gl_cube/src/: CMakeLists.txt
host/: .abcde.conf  .bashrc  .bashrc.new  .emacs  .gdbinit  .gitconfig  .inputrc  .pam_mount.conf.xml  .profile  .vimrc  alain_xfce4_terminal.theme  terminalrc  xfce4_clock_config_string
host/etc/: fancontrol  locale.conf  (+5 more)
html/: graziani_keen.html
jupyter_notebooks/: graziani_keen.ipynb  pure_credit_economy.ipynb  pure_credit_economy_keen.ipynb
keen_economics/: graziani_keen.ipynb
math/: Ekvation.tex
neatxt/: Makefile  neatxt  neatxt.cpp  neatxt.py
ntm/: Makefile  and.ntm  check_nand.ntm  check_not.ntm  not.ntm  ntm.cpp  ntm_check  ntm_check.cpp  ntm_interpreter.cpp  ntm_interpreter.hpp
ntm01/: Makefile  ntm  ntm_interpreter.cpp
python_code/: arithmetic_tokenizer.py  ballistics_0.py  complex_function.py  function_class.py  tokenize_arithmetic.py  tokenize_arithmetic2.py
python_for_kids/: python_for_kids.ipynb
stm32f746-disco/: .cproject  .project
stm32f746-disco_with_cubemx/: .project
undumo/: CMakeLists.txt
undumo/contrib/glad/include/glad/: glad.h
undumo/contrib/glad/src/: glad.c
undumo/src/: glsl.cpp  glsl.hpp  undumo.c  undumo.cpp  utils.cpp  utils.hpp
(+230 files in other folders)
